# gym2real

./: CMakeLists.txt  Cartpole.pth.onnx  Dockerfile.jetson  Quadcopter.pth.onnx  README.md  actor.onnx  onnx_inference.cpp  posix.py  statestore.yaml
include/: controller.h  imu.h  memory_manager.h  onnx_controller.h  remap.h
python/: balancer.py  imu.py  pid.conf  smbus_test.py  twip_gpio.py
ros2/experiments/: package.xml  setup.cfg  setup.py
ros2/experiments/experiments/: imu_data.py
ros2/imu_driver/: CMakeLists.txt  package.xml
ros2/imu_driver/include/imu_driver/: imu.h  imu_driver.h
ros2/imu_driver/src/: imu.cpp  imu_driver.cpp
ros2/imu_driver/test/: test_imu.cpp
ros2/motor_driver/: CMakeLists.txt
ros2/motor_driver/include/motor_driver/: motor_driver.h
ros2/motor_driver/motor_driver/: motor_driver.py
ros2/motor_driver/src/: motor_driver.cpp
ros2/motor_driver_py/: package.xml  setup.py
ros2/onnx_controller/: CMakeLists.txt  Twip.pth.onnx  package.xml
ros2/onnx_controller/include/onnx_controller/: onnx_controller.h
ros2/onnx_controller/launch/: onnx_controller.launch.py
ros2/onnx_controller/src/: onnx_controller.cpp
ros2/pid_controller/: CMakeLists.txt  package.xml  pid_pos.yaml
ros2/pid_controller/include/pid_controller/: pid_controller.h
ros2/pid_controller/launch/: pid_controller.launch.py
ros2/pid_controller/src/: pid_controller.cpp
scripts/: install_jetsongpio.sh  install_libi2c.sh  install_preempt_rt.sh
src/: imu.cpp
test/: test_imu.cpp
